cmake_minimum_required(VERSION 2.6)

PROJECT(cmocka-hello-tests)
ADD_DEFINITIONS(-Wall -Werror --std=gnu99 -Wmissing-declarations)

FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/../build/modules")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)

SET(SOURCES
	../src/almost-calc.c
	almost-calc-sum.c
)

ADD_EXECUTABLE(almost-calc-sum ${SOURCES})

FIND_PACKAGE(CMOCKA REQUIRED)
INCLUDE_DIRECTORIES(${LIBCMOCKA_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(almost-calc-sum ${LIBCMOCKA_LIBRARIES})

INSTALL(TARGETS almost-calc-sum RUNTIME DESTINATION bin)
